--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,19 @@ coverage
 # dist 目录下存放构建代码
 dist
 .DS_Store
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.local
+stats.html
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 课件
