--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,23 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+/cypress/videos/
+/cypress/screenshots/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+*.tsbuildinfo
 课件
+
+
+#Vitepress
+docs/.vitepress/cache
+docs/.vitepress/dis
+
