--- a/package.json
+++ b/package.json
@@ -2,18 +2,38 @@
   "name": "@shishuaiyun/jstoolpack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.common.js",
+  "module": "./dist/index.esm.js",
+  "browser": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
   "scripts": {
     "test": "jest",
+    "build": "rollup -c rollup.config.ts --configPlugin typescript",
     "publish": "npm publish --access=public"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "files": [
+    "/dist",
+    "LICENSE"
+  ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "rollup": "^4.40.1",
+    "rollup-plugin-clear": "^2.0.7",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
