--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@shishuaiyun/jstoolpack",
   "version": "1.0.0",
   "description": "",
-  "private": false,
   "main": "./dist/index.common.js",
   "module": "./dist/index.esm.js",
   "browser": "./dist/index.js",
@@ -38,5 +37,8 @@
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
